fix styling for tag to not fill height when container stretches

--- a/src/pages/Office/TXOMoveInfo/TXOTab.module.scss
+++ b/src/pages/Office/TXOMoveInfo/TXOTab.module.scss
@@ -91,3 +91,10 @@
 .shipmentCard:last-child {
   margin-bottom: 135px;
 }
+
+.tag {
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  margin: auto 0;
+}
